--- a/Kata5 WriteNumbersTests/Kata5 WriteNumbersTests.csproj
+++ b/Kata5 WriteNumbersTests/Kata5 WriteNumbersTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BADCDFEB-D567-4EF4-87E3-D72B607B5F37}</ProjectGuid>
+    <ProjectGuid>{A38D952B-5F5A-4715-A4A9-617C14EF6B32}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kata6_BreakCamelCaseTests1</RootNamespace>
-    <AssemblyName>Kata6 BreakCamelCaseTests1</AssemblyName>
+    <RootNamespace>Kata5_WriteNumbersTests</RootNamespace>
+    <AssemblyName>Kata5 WriteNumbersTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,16 +56,16 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="BreakCamelCaseTests.cs" />
+    <Compile Include="NumberTranslationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\breakCamelCase\Kata6 BreakCamelCase.csproj">
-      <Project>{BD907A89-EA4A-4E56-8583-CC6F47122537}</Project>
-      <Name>Kata6 BreakCamelCase</Name>
+    <ProjectReference Include="..\Kata5 WriteNumbers\Kata5 WriteNumbers.csproj">
+      <Project>{6DB9324F-7BCF-4F1B-9AF6-50B0EDDCC5E0}</Project>
+      <Name>Kata5 WriteNumbers</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
